# AUTO-GG

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: CPM.cmake
include/: hack.cpp
src/: main.cpp  menu.hpp
